fixing master shifts page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -79,7 +79,7 @@
   margin-right: 10px;
 }
 .person-shifts {
-  width: 500px;
+  width: 600px;
 }
 #trips {
   width: 500px;
